# qapt

./: .gitignore  CMakeLists.txt  Messages.sh  README.md
apt-xapian-index-dbus/: CMakeLists.txt  update-apt-xapian-index-dbus
autotests/: CMakeLists.txt  dependencyinfotest.cpp  sourceslisttest.cpp  sourceslisttest.h  transactionerrorhandlingtest.cpp  transactionerrorhandlingtest.h
debian/: changelog  control  copyright  libqapt3-runtime.lintian-overrides  libqapt3.symbols  qapt-batch.lintian-overrides  qapt-deb-installer.lintian-overrides  rules  watch
debian/patches/: 0001-Fix-Package-supportedUntil-never-getting-the-date.patch  apt-1.9.0.patch  apt-1.9.11.patch  missing-includes.diff  series  upstream_include-random-for-std-default_random_engine.patch
po/ar/: messages.mo
po/ast/: messages.mo  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/bs/: messages.mo
po/ca/: messages.mo
po/ca@valencia/: messages.mo  plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/cs/: messages.mo
po/da/: messages.mo
po/de/: messages.mo  qaptbatch.po
po/el/: messages.mo
po/en_GB/: messages.mo
po/eo/: messages.mo
po/es/: messages.mo
po/et/: messages.mo
po/fa/: messages.mo
po/fi/: messages.mo
po/fr/: messages.mo
po/ga/: messages.mo
po/gl/: messages.mo  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/hu/: messages.mo
po/id/: messages.mo  plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/it/: messages.mo
po/ja/: messages.mo
po/kk/: messages.mo
po/ko/: messages.mo  qapt-gst-helper.po  qaptbatch.po
po/lt/: messages.mo  qapt-gst-helper.po
po/mai/: messages.mo
po/mr/: messages.mo
po/nb/: messages.mo  plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/nds/: messages.mo
po/nl/: messages.mo
po/pa/: messages.mo
po/pl/: messages.mo
po/pt/: messages.mo
po/pt_BR/: messages.mo
po/ro/: messages.mo  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/ru/: messages.mo  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/sk/: messages.mo
po/sl/: messages.mo
po/sr/: messages.mo  qapt-deb-installer.po
po/sr@ijekavian/: messages.mo  qapt-deb-installer.po
po/sr@ijekavianlatin/: messages.mo  qapt-deb-installer.po
po/sr@latin/: messages.mo  (+1 more)
src/: CMakeLists.txt  backend.cpp  backend.h  changelog.cpp  config.cpp  debfile.cpp  dependencyinfo.cpp  history.cpp  history.h  package.cpp  sourceentry.cpp  sourceslist.cpp  sourceslist.h  transaction.cpp
utils/plasma-runner-installer/: CMakeLists.txt  installerrunner.cpp  installerrunner.h  plasma-runner-installer.json
utils/qapt-deb-thumbnailer/: CMakeLists.txt  DebThumbnailer.cpp  DebThumbnailer.h  debthumbnailer.json
(+40 files in other folders)
